[gd_scene load_steps=6 format=3 uid="uid://bknr4x1oapo6q"]

[ext_resource type="Script" path="res://scripts/enemy_bullet.gd" id="1_68o13"]
[ext_resource type="Texture2D" uid="uid://coxe3skqscw6i" path="res://icon.svg" id="2_nysy1"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_jjm1l"]
light_mode = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bn60x"]
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pkyqi"]
size = Vector2(14, 14)

[node name="enemyBullet" type="RigidBody2D" groups=["enemyBullet"]]
collision_layer = 3
collision_mask = 3
mass = 0.01
gravity_scale = 0.0
script = ExtResource("1_68o13")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("CanvasItemMaterial_jjm1l")
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_nysy1")

[node name="regularHitbox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_bn60x")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-4.76837e-07, -4.76837e-07)
scale = Vector2(0.6, 0.6)

[node name="Area2D" type="Area2D" parent="." groups=["enemyBulletArea"]]

[node name="enemyCollisionHitbox" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_pkyqi")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
